--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <button onclick="newCard()">NEW CARD</button>
         <p id="player-el"></p>
         <button id="stop-el" onclick="stopgame()">STOP GAME</button>
-        <script src="index.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
